# fastapi-python-modules

./: .env.example  .gitignore  CHANGES.md  DEPLOYMENT.md  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/v1/: router.py
app/core/: config.py  exceptions.py  logging.py  module_registry.py
app/infrastructure/: mongodb.py
app/shared/schemas/: common.py
modules/: __init__.py
modules/resume_ats/: RESUME_ATS_SYSTEM.md  __init__.py  contracts.py  router.py
modules/resume_ats/analysis/: llm_analyzer.py  pipeline.py
modules/resume_ats/api/v1/: analyze.py  domain_detect.py  extract.py  feedback.py  results.py  roles.py  score.py  scores.py
modules/resume_ats/data/: jd_loader.py  roles.json
modules/resume_ats/data/iit/: department_role_map.json
modules/resume_ats/data/jds/: 3d_artist.json  aerodynamics_engineer.json  (+239 more)
modules/resume_ats/db/: __init__.py  repository.py
modules/resume_ats/domain_classifier/: classifier.py  iit_department_map.py
modules/resume_ats/entities/: extractor.py
modules/resume_ats/extraction/: pipeline.py  text_adapter.py
modules/resume_ats/schemas/: api.py
modules/resume_ats/scoring/: __init__.py  bm25_scorer.py  domain_scorer.py  exact_keyword_scorer.py  experience_scorer.py  jaccard_scorer.py  orchestrator.py  resume_quality_scorer.py  semantic_scorer.py  skill_depth_scorer.py  skill_synonyms.py  tfidf_scorer.py  utils.py
modules/resume_ats/services/: resume_service.py
scripts/: __init__.py  seed_jds.py
static/: index.html
tests/: conftest.py
tests/benchmarks/resume_ats/: benchmark_runner.py
(+10 files in other folders)
