[project]
name = "fastapi-features"
version = "0.2.0"
description = "Modular FastAPI platform with ATS Resume Intelligence Engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.12",
    "motor>=3.6.0",
    "pymongo>=4.10.0",
    "instructor>=1.7.0",
    "openai>=1.57.0",
    "pdfplumber>=0.11.4",
    "pypdf>=5.1.0",
    "pdfminer.six>=20240706",
    "rapidfuzz>=3.10.0",
    "numpy>=2.1.0",
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "modules*"]
